<resources>
    <string name="app_name">My Health</string>
    // Files
    <string name="bellyFile">buikomtrek.txt</string>
    <string name="upperPFile">bovendruk.txt</string>
    <string name="lowerPFile">onderdruk.txt</string>
    <string name="heartbeatFile">hartslag.txt</string>

    // Instructions
    <string name="enter_values_and_press_add">Vul in en druk toevoegen</string>
    <string name="update_belly_measurement_text">Pas buikomtrek aan en druk op Aanpassen</string>
    <string name="updateScrnIntruction">Pas aan en druk op AANPASSEN</string>

    // Labels:
    <string name="date_input_label">Datum:</string>
    <string name="belly_radius_input_label">Buikomtrek:</string>
    <string name="enter_date_text">vul datum in</string>
    <string name="bellyMeasurementListLabelDate">Datum</string>
    <string name="BellyMeasurementsListLabelRadius">Buikomtrek</string>
    <string name="waarde1Label">Waarde1:</string>
    <string name="waarde2Label">Waarde2:</string>
    <string name="waarde3Label">Waarde3:</string>

    // Hints
    <string name="enter_date_hint">datum</string>
    <string name="enter_belly_radius_hint">buikomtrek</string>
    <string name="waarde1Hint">waarde1</string>
    <string name="waarde2Hint">waarde2</string>
    <string name="waarde3Hint">waarde3</string>

    // Buttons MainActivity
    <string name="belly">Buikomtrek</string>
    <string name="blood_pressure">Bloeddruk</string>

    // Buttons
    <string name="add_belly_measurement_button">Toevoegen</string>
    <string name="aanpassen_button">Aanpassen</string>

    // Activity Titles
    <string name="title_update_belly">Aanpassen Buikomtrek</string>
    <string name="title_new_belly">Toevoegen Buikomtrek</string>
    <string name="title_activity_belly">Buikomtrek Meting</string>

    // Actions
    <string name="Insert">insert</string>

    // Garbage
    <string name="resumeinfo">ResumeInfo</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lower">Lower</string>
    <string name="heartbeat">Heartbeat</string>
    <string name="datepicker">datePicker</string>
    <string name="todo">TODO</string>
    <string name="hello_blank_fragment">Hello Blank Fragment</string>
    <string name="label_email_adres">Email Adres:</string>
    <string name="label_minimum_date">Startdatum metingen:</string>
    <string name="hint_email_adres">email adres</string>
    <string name="button_send">Send</string>
    <string name="checkbox_already_sent">Enkel nog niet verstuurde metingen</string>
    <string name="instruction_send_email">Vul in en druk Send</string>

</resources>