<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewBellyMeasurementActivity">
    <TextView
        android:id="@+id/newBellyMTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/enter_values_and_press_add"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/newBellyDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/date_input_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newBellyMTitle" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:autofillHints=""
        android:ems="10"
        android:onClick="showDatePicker"
        android:hint="@string/enter_date_hint"
        android:inputType="date"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/newBellyDateLabel"
        app:layout_constraintStart_toEndOf="@+id/newBellyDateLabel" />

    <TextView
        android:id="@+id/newBellyRadiusLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/belly_radius_input_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newBellyDateLabel" />

    <EditText
        android:id="@+id/editNumberRadius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_belly_radius_hint"
        android:inputType="numberDecimal"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/newBellyRadiusLabel"
        app:layout_constraintStart_toEndOf="@+id/newBellyRadiusLabel" />

    <Button
        android:id="@+id/addNewBelly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/add_belly_measurement_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newBellyRadiusLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>