<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="363dp"
        android:layout_height="670dp"
        android:layout_margin="12dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="324dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mListColHead1"
        tools:ignore="MissingConstraints"
        tools:listitem="@layout/recyclerview_mlist_item" />

    <TextView
        android:id="@+id/mListColHead1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/bellyMeasurementListLabelDate"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mListColHead2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/BellyMeasurementsListLabelRadius"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/mListColHead1"
        app:layout_constraintStart_toEndOf="@+id/mListColHead1" />

    <TextView
        android:id="@+id/mListColHead3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/lower"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/mListColHead2"
        app:layout_constraintStart_toEndOf="@+id/mListColHead2" />

    <TextView
        android:id="@+id/mListColHead4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/heartbeat"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/mListColHead3"
        app:layout_constraintStart_toEndOf="@+id/mListColHead3" />

</androidx.constraintlayout.widget.ConstraintLayout>